More adjustments to obtain a partially working version.
Most of the services are now functional: validation and compilation of
models, compilation of GAML additions that respect the Java 11
constraints on packages, launch of the platform, late opening of the UI,
new splash screen handling, etc.